[tool.poetry]
name = "lidar-test"
version = "0.1.0"
description = ""
authors = ["Henry Ascencio <ascencio.henan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
